coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -222,6 +222,16 @@ paths:
           name: group
           type: string
           description: A node group name.
+        - in: query
+          name: state
+          type: string
+          enum: [Unknown, Provisioning, Offline, Starting, Online, Draining, Rejected, Removing, NotDeployed, Stopping]
+          description: Node state.
+        - in: query
+          name: health
+          type: string
+          enum: [OK, Warning, Error, Transitional, Unapproved]
+          description: Node health.
       responses:
         200:
           description: OK
