--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -1658,9 +1658,9 @@ definitions:
     items:
       type: object
       properties:
-        name: 
+        Name: 
           $ref: '#/definitions/NodeState'
-        value:
+        Value:
           type: number
 
   NodeStatOfHealth:
@@ -1668,9 +1668,9 @@ definitions:
     items:
       type: object
       properties:
-        name:
+        Name:
           $ref: '#/definitions/NodeHealth'
-        value:
+        Value:
           type: number
 
   Node:
